--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -1,4 +1,4 @@
-<!-- register.html -->
+<!-- 新規案件登録画面 -->
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/styles_register.css">
@@ -6,26 +6,26 @@
 <div class="register-form">
     <form>
         <label for="title">案件名</label>
-        <input type="text" id="title" name="title" required>
+        <input type="text" name="title" required>
   
         <label for="customer">顧客名</label>
-        <input id="customer" name="customer"></input>
+        <input name="customer"></input>
 
         <label for="description">業務内容</label>
-        <input id="description" name="description"></input>
+        <input name="description"></input>
 
         <label for="syain">参画者</label>
-        <input id="syain" name="syain"></input>
+        <input name="syain"></input>
         
         <label for="eigyo">担当営業</label>
-        <select id="eigyo" name="eigyo">
+        <select name="eigyo">
             <option value="1">山田 太郎</option>
             <option value="2">佐藤 花子</option>
             <option value="3">本田 二郎</option>
         </select>
   
         <label for="type">案件タイプ</label>
-        <select id="type" name="type">
+        <select name="type">
             <option value="web">インフラ</option>
             <option value="mobile">開発</option>
             <option value="system">その他</option>
