URLを分けるためhtml改良開始

--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>メインメニュー</title>
-    <link rel="stylesheet" href="/css/styles_main.css">
+    <link rel="stylesheet" href="/css/styles_common.css">
+    <link rel="stylesheet" href="/css/styles_main.css">    
 </head>
 <body>
 
@@ -33,7 +34,7 @@
                     <a href="#" onclick="toggleSubMenu3()">ユーザ情報</a>
                     <ul id="submenu3" style="display: none; margin-left: 20px;">
                         <li><a href="#" onclick="showContent('ユーザ情報一覧')">ユーザ情報一覧</a></li>
-                        <li><a href="#" onclick="showContent('ユーザ情報登録')">ユーザ情報登録</a></li>
+                        <li><a href="/users.html" onclick="showContent('ユーザ情報登録')">ユーザ情報登録</a></li>
                     </ul>
                 </li>
                 <li><a href="#" onclick="logout()">ログアウト</a></li>
