--- a/src/main/resources/static/users.html
+++ b/src/main/resources/static/users.html
@@ -1,22 +1,73 @@
-<!-- ユーザ情報登録画面 -->
+<!DOCTYPE html>
+<html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/styles_users.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ユーザ情報登録</title>
+  <link rel="stylesheet" href="/css/styles_common.css">
+  <link rel="stylesheet" href="/css/styles_users.css">  
 </head>
-<div class="register-form">
-    <form>
-        <label for="userid">ユーザID</label>
-        <input type="text" id="userid" name="userid" required></input>
-  
-        <label for="password">パスワード</label>
-        <input type="text" id="password" name="password" required></input>
-  
-        <label for="role">ロール</label>
-        <select id="role" name="role">
+<body>
+
+  <div class="container">
+    <!-- 🟡 ここはmain.htmlと同じサイドバーをそのまま記述 -->
+    <nav class="sidebar">
+      <ul>
+        <li><a href="/main.html">案件新規登録</a></li>
+        <li>
+          <a href="#">案件情報</a>
+          <ul style="margin-left: 20px;">
+            <li><a href="#">案件情報一覧</a></li>
+            <li><a href="#">申請待ち</a></li>
+            <li><a href="#">差し戻し</a></li>
+            <li><a href="#">承認済み</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">社員情報</a>
+          <ul style="margin-left: 20px;">
+            <li><a href="#">社員情報一覧</a></li>
+            <li><a href="#">社員情報登録</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">ユーザ情報</a>
+          <ul style="margin-left: 20px;">
+            <li><a href="#">ユーザ情報一覧</a></li>
+            <li><a href="/users.html">ユーザ情報登録</a></li>
+          </ul>
+        </li>
+        <li><a href="#" onclick="logout()">ログアウト</a></li>
+      </ul>
+    </nav>
+
+    <!-- 🔥 ここが右側のメイン -->
+    <main class="content">
+      <h1>ユーザ情報登録</h1>
+
+      <!-- 🔴 ユーザ登録フォーム -->
+      <div class="register-form">
+        <form id="registerForm">
+          <label for="userid">ユーザID</label>
+          <input type="text" id="userid" name="userid" required>
+
+          <label for="password">パスワード</label>
+          <input type="text" id="password" name="password" required>
+
+          <label for="role">ロール</label>
+          <select id="role" name="role">
             <option value="users">一般</option>
             <option value="root">管理者</option>
-        </select>
-  
-        <button type="submit">登録</button>
-    </form>
-</div>
+          </select>
+
+          <button type="submit">登録</button>
+        </form>
+      </div>
+
+    </main>
+  </div>
+
+  <script src="/js/app_users.js"></script>
+
+</body>
+</html>
