--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -13,10 +13,10 @@
         <!-- サイドバー -->
         <nav class="sidebar">
             <ul>
-                <li><a href="#" onclick="showContent('案件新規登録')">案件新規登録</a></li>
+                <li><a href="register.html" onclick="showContent('案件新規登録')">案件新規登録</a></li>
                 <li>
                     <a href="#" onclick="toggleSubMenu1()">案件情報</a>
-                    <ul id="submenu1" style="display: none; margin-left: 20px;">
+                    <ul id="submenu1" style="margin-left: 20px;">
                         <li><a href="#" onclick="showContent('案件情報一覧')">案件情報一覧</a></li>
                         <li><a href="#" onclick="showContent('申請待ち')">申請待ち</a></li>
                         <li><a href="#" onclick="showContent('差し戻し')">差し戻し</a></li>
@@ -27,7 +27,7 @@
                     <a href="#" onclick="toggleSubMenu2()">社員情報</a>
                     <ul id="submenu2" style="display: none; margin-left: 20px;">
                         <li><a href="#" onclick="showContent('社員情報一覧')">社員情報一覧</a></li>
-                        <li><a href="#" onclick="showContent('社員情報登録')">社員情報登録</a></li>
+                        <li><a href="/employee.html" onclick="showContent('社員情報登録')">社員情報登録</a></li>
                     </ul>
                 </li>
                 <li>
