--- a/src/main/resources/static/users.html
+++ b/src/main/resources/static/users.html
@@ -13,41 +13,41 @@
     <!-- 🟡 ここはmain.htmlと同じサイドバーをそのまま記述 -->
     <nav class="sidebar">
       <ul>
-        <li><a href="/main.html">案件新規登録</a></li>
-        <li>
-          <a href="#">案件情報</a>
-          <ul style="margin-left: 20px;">
-            <li><a href="#">案件情報一覧</a></li>
-            <li><a href="#">申請待ち</a></li>
-            <li><a href="#">差し戻し</a></li>
-            <li><a href="#">承認済み</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="#">社員情報</a>
-          <ul style="margin-left: 20px;">
-            <li><a href="#">社員情報一覧</a></li>
-            <li><a href="#">社員情報登録</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="#">ユーザ情報</a>
-          <ul style="margin-left: 20px;">
-            <li><a href="#">ユーザ情報一覧</a></li>
-            <li><a href="/users.html">ユーザ情報登録</a></li>
-          </ul>
-        </li>
-        <li><a href="#" onclick="logout()">ログアウト</a></li>
+          <li><a href="register.html" onclick="showContent('案件新規登録')">案件新規登録</a></li>
+          <li>
+              <a href="#" onclick="toggleSubMenu1()">案件情報</a>
+              <ul id="submenu1" style="display: none; margin-left: 20px;">
+                  <li><a href="#" onclick="showContent('案件情報一覧')">案件情報一覧</a></li>
+                  <li><a href="#" onclick="showContent('申請待ち')">申請待ち</a></li>
+                  <li><a href="#" onclick="showContent('差し戻し')">差し戻し</a></li>
+                  <li><a href="#" onclick="showContent('承認済み')">承認済み</a></li>
+              </ul>
+          </li>
+          <li>
+              <a href="#" onclick="toggleSubMenu2()">社員情報</a>
+              <ul id="submenu2" style="display: none; margin-left: 20px;">
+                  <li><a href="#" onclick="showContent('社員情報一覧')">社員情報一覧</a></li>
+                  <li><a href="employee.html" onclick="showContent('社員情報登録')">社員情報登録</a></li>
+              </ul>
+          </li>
+          <li>
+              <a href="#" onclick="toggleSubMenu3()">ユーザ情報</a>
+              <ul id="submenu3" style="margin-left: 20px;">
+                  <li><a href="#" onclick="showContent('ユーザ情報一覧')">ユーザ情報一覧</a></li>
+                  <li><a href="users.html" onclick="showContent('ユーザ情報登録')">ユーザ情報登録</a></li>
+              </ul>
+          </li>
+          <li><a href="#" onclick="logout()">ログアウト</a></li>
       </ul>
-    </nav>
+    </nav>   
 
     <!-- 🔥 ここが右側のメイン -->
     <main class="content">
       <h1>ユーザ情報登録</h1>
 
       <!-- 🔴 ユーザ登録フォーム -->
-      <div class="register-form">
-        <form id="registerForm">
+      <div class="users-form">
+        <form id="usersForm">
           <label for="userid">ユーザID</label>
           <input type="text" id="userid" name="userid" required>
 
