DB受け渡し開発開始

--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -74,7 +74,9 @@
 
             <button type="submit">申請</button>
         </form>
-    </div>
+        </div>
+    </main>
+</div>
 
     <script src="/js/app_register.js"></script>
 </body>
