リスト表示開発開始

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
             <label for="password">パスワード:</label>
             <input type="password" id="password" name="password" required>
 
-            <button id="loginButtom" type="button" onclick="mainPage(); return false;">ログイン</button>
+            <button type="submit">ログイン</button>
             <p id="errorMessage" class="error-message"></p>
         </form>
     </div>
