--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -33,11 +33,11 @@
           <li>
               <a href="#" onclick="toggleSubMenu3()">ユーザ情報</a>
               <ul id="submenu3" style="display: none; margin-left: 20px;">
-                  <li><a href="#" onclick="showContent('ユーザ情報一覧')">ユーザ情報一覧</a></li>
+                  <li><a href="users_list.html" onclick="showContent('ユーザ情報一覧')">ユーザ情報一覧</a></li>
                   <li><a href="users.html" onclick="showContent('ユーザ情報登録')">ユーザ情報登録</a></li>
               </ul>
           </li>
-          <li><a href="#" onclick="logout()">ログアウト</a></li>
+          <li><a href="index.html">ログアウト</a></li>
       </ul>
     </nav>   
 
