ユーザ、社員のリスト表示完了

--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -26,7 +26,7 @@
                 <li>
                     <a href="#" onclick="toggleSubMenu2()">社員情報</a>
                     <ul id="submenu2" style="display: none; margin-left: 20px;">
-                        <li><a href="#">社員情報一覧</a></li>
+                        <li><a href="employee_list.html">社員情報一覧</a></li>
                         <li><a href="employee.html">社員情報登録</a></li>
                     </ul>
                 </li>
