--- a/src/main/resources/static/users.html
+++ b/src/main/resources/static/users.html
@@ -17,11 +17,18 @@
           <li>
               <a href="#" onclick="toggleSubMenu1()">案件情報</a>
               <ul id="submenu1" style="display: none; margin-left: 20px;">
-                  <li><a href="#">案件情報一覧</a></li>
+                  <li><a href="project_list.html">案件情報一覧</a></li>
                   <li><a href="#">申請待ち</a></li>
                   <li><a href="#">差し戻し</a></li>
                   <li><a href="#">承認済み</a></li>
               </ul>
+          </li>
+          <li>
+            <a href="#" onclick="toggleSubMenu4()">顧客情報</a>
+            <ul id="submenu4" style="display: none; margin-left: 20px;">
+              <li><a href="customer.html">新規顧客登録</a></li>
+              <li><a href="customer_list.html">顧客情報一覧</a></li>
+            </ul>
           </li>
           <li>
               <a href="#" onclick="toggleSubMenu2()">社員情報</a>
