--- a/src/main/resources/static/project_list.html
+++ b/src/main/resources/static/project_list.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>社員情報一覧</title>
+    <title>案件情報一覧</title>
     <link rel="stylesheet" href="/css/styles_common.css">
-    <link rel="stylesheet" href="/css/styles_employee_list.css">
+    <link rel="stylesheet" href="/css/styles_project_list.css">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
                 <li><a href="register.html" onclick="showContent('案件新規登録')">案件新規登録</a></li>
                 <li>
                     <a href="#" onclick="toggleSubMenu1()">案件情報</a>
-                    <ul id="submenu1" style="display: none; margin-left: 20px;">
+                    <ul id="submenu1" style="margin-left: 20px;">
                         <li><a href="project_list.html">案件情報一覧</a></li>
                         <li><a href="#">申請待ち</a></li>
                         <li><a href="#">差し戻し</a></li>
@@ -25,14 +25,15 @@
                 </li>
                 <li>
                     <a href="#" onclick="toggleSubMenu4()">顧客情報</a>
-                    <ul id="submenu4" style="display: none; margin-left: 20px;">
+                    <ul id="submenu4" style="margin-left: 20px;">
                         <li><a href="customer.html">新規顧客登録</a></li>
                         <li><a href="customer_list.html">顧客情報一覧</a></li>
                     </ul>
                 </li>
                 <li>
+                <li>
                     <a href="#" onclick="toggleSubMenu2()">社員情報</a>
-                    <ul id="submenu2" style="margin-left: 20px;">
+                    <ul id="submenu2" style="display: none; margin-left: 20px;">
                         <li><a href="employee_list.html">社員情報一覧</a></li>
                         <li><a href="employee.html">社員情報登録</a></li>
                     </ul>
@@ -48,25 +49,27 @@
             </ul>
         </nav>
 
-        <!-- ✅ メインコンテンツ -->
+    <!-- ✅ メインコンテンツ -->
         <main class="content">
-            <h1>社員情報一覧</h1>
+            <h1>案件情報一覧</h1>
             <table class="user-table">
                 <thead>
                     <tr>
-                        <th>社員名</th>
-                        <th>年齢</th>
-                        <th>部署</th>
+                        <th>案件名</th>
+                        <th>顧客名</th>
+                        <th>業務内容</th>
+                        <th>参画者</th>
+                        <th>担当営業</th>
+                        <th>案件タイプ</th>
                         <th>操作</th>
                     </tr>
                 </thead>
-                <tbody id="employee-list">
-                    <!-- JSで生成される -->
+                <tbody id="project-list">
+                    <!-- JSでtrを追加 -->
                 </tbody>
-            </table>
+            </table>            
         </main>
     </div>
-
-    <script src="/js/app_employee_list.js"></script>
+    <script src="/js/app_project_list.js"></script>
 </body>
 </html>
