--- a/src/main/resources/static/users_list.html
+++ b/src/main/resources/static/users_list.html
@@ -17,25 +17,32 @@
           <li>
               <a href="#" onclick="toggleSubMenu1()">案件情報</a>
               <ul id="submenu1" style="display: none; margin-left: 20px;">
-                  <li><a href="#">案件情報一覧</a></li>
+                  <li><a href="project_list.html">案件情報一覧</a></li>
                   <li><a href="#">申請待ち</a></li>
                   <li><a href="#">差し戻し</a></li>
                   <li><a href="#">承認済み</a></li>
               </ul>
           </li>
           <li>
-              <a href="#" onclick="toggleSubMenu2()">社員情報</a>
-              <ul id="submenu2" style="display: none; margin-left: 20px;">
-                  <li><a href="employee_list.html">社員情報一覧</a></li>
-                  <li><a href="employee.html">社員情報登録</a></li>
-              </ul>
+            <a href="#" onclick="toggleSubMenu4()">顧客情報</a>
+            <ul id="submenu4" style="display: none; margin-left: 20px;">
+              <li><a href="customer.html">新規顧客登録</a></li>
+              <li><a href="customer_list.html">顧客情報一覧</a></li>
+            </ul>
           </li>
           <li>
-              <a href="#" onclick="toggleSubMenu3()">ユーザ情報</a>
-              <ul id="submenu3" style="margin-left: 20px;">
-                  <li><a href="users_list.html">ユーザ情報一覧</a></li>
-                  <li><a href="users.html">ユーザ情報登録</a></li>
-              </ul>
+            <a href="#" onclick="toggleSubMenu2()">社員情報</a>
+            <ul id="submenu2" style="display: none; margin-left: 20px;">
+                <li><a href="employee_list.html">社員情報一覧</a></li>
+                <li><a href="employee.html">社員情報登録</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#" onclick="toggleSubMenu3()">ユーザ情報</a>
+            <ul id="submenu3" style="margin-left: 20px;">
+              <li><a href="users_list.html">ユーザ情報一覧</a></li>
+              <li><a href="users.html">ユーザ情報登録</a></li>
+            </ul>
           </li>
           <li><a href="index.html">ログアウト</a></li>
       </ul>
