--- a/src/main/resources/static/employee_list.html
+++ b/src/main/resources/static/employee_list.html
@@ -18,9 +18,9 @@
                     <a href="#" onclick="toggleSubMenu1()">案件情報</a>
                     <ul id="submenu1" style="display: none; margin-left: 20px;">
                         <li><a href="project_list.html">案件情報一覧</a></li>
-                        <li><a href="#">申請待ち</a></li>
-                        <li><a href="#">差し戻し</a></li>
-                        <li><a href="#">承認済み</a></li>
+                        <li><a href="status_pending.html">承認待ち</a></li>
+                        <li><a href="status_rejected.html">差し戻し</a></li>
+                        <li><a href="status_approved.html">承認済み</a></li>
                     </ul>
                 </li>
                 <li>
@@ -44,6 +44,7 @@
                         <li><a href="users.html">ユーザ情報登録</a></li>
                     </ul>
                 </li>
+                <li><a href="/projects/export/csv" download>CSVエクスポート</a></li>
                 <li><a href="index.html">ログアウト</a></li>
             </ul>
         </nav>
@@ -68,5 +69,6 @@
     </div>
 
     <script src="/js/app_employee_list.js"></script>
+    <script src="/js/app_common.js"></script>
 </body>
 </html>
