--- a/src/main/resources/static/project_list.html
+++ b/src/main/resources/static/project_list.html
@@ -18,14 +18,14 @@
                     <a href="#" onclick="toggleSubMenu1()">案件情報</a>
                     <ul id="submenu1" style="margin-left: 20px;">
                         <li><a href="project_list.html">案件情報一覧</a></li>
-                        <li><a href="#">申請待ち</a></li>
-                        <li><a href="#">差し戻し</a></li>
-                        <li><a href="#">承認済み</a></li>
+                        <li><a href="status_pending.html">承認待ち</a></li>
+                        <li><a href="status_rejected.html">差し戻し</a></li>
+                        <li><a href="status_approved.html">承認済み</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="#" onclick="toggleSubMenu4()">顧客情報</a>
-                    <ul id="submenu4" style="margin-left: 20px;">
+                    <ul id="submenu4" style="display: none; margin-left: 20px;">
                         <li><a href="customer.html">新規顧客登録</a></li>
                         <li><a href="customer_list.html">顧客情報一覧</a></li>
                     </ul>
@@ -45,6 +45,7 @@
                         <li><a href="users.html">ユーザ情報登録</a></li>
                     </ul>
                 </li>
+                <li><a href="/projects/export/csv" download>CSVエクスポート</a></li>
                 <li><a href="index.html">ログアウト</a></li>
             </ul>
         </nav>
@@ -61,6 +62,7 @@
                         <th>参画者</th>
                         <th>担当営業</th>
                         <th>案件タイプ</th>
+                        <th>ステータス</th>
                         <th>操作</th>
                     </tr>
                 </thead>
@@ -71,5 +73,6 @@
         </main>
     </div>
     <script src="/js/app_project_list.js"></script>
+    <script src="/js/app_common.js"></script>
 </body>
 </html>
