--- a/src/main/resources/static/employee_list.html
+++ b/src/main/resources/static/employee_list.html
@@ -57,7 +57,8 @@
                     <tr>
                         <th>社員名</th>
                         <th>年齢</th>
-                        <th>部署</th>
+                        <th>役職</th>
+                        <th>電話番号</th>
                         <th>操作</th>
                     </tr>
                 </thead>
