--- a/src/main/resources/static/project_list.html
+++ b/src/main/resources/static/project_list.html
@@ -58,12 +58,12 @@
                     <tr>
                         <th>案件名</th>
                         <th>顧客名</th>
-                        <th>業務内容</th>
+                        <th>金額</th>
                         <th>参画者</th>
                         <th>担当営業</th>
-                        <th>案件タイプ</th>
-                        <th>期限</th> <!-- ✅ -->
-                        <th>金額</th> 
+                        <th>タイプ</th>
+                        <th>内容</th>
+                        <th>期限</th>
                         <th>ステータス</th>
                         <th>操作</th>
                     </tr>
