ワークフロー機能改修中

--- a/src/main/resources/static/status_admin.html
+++ b/src/main/resources/static/status_admin.html
@@ -57,7 +57,7 @@
             </ul>
         </nav>
         <main class="content">
-            <h1>承認済みの案件一覧</h1>
+            <h1>最終承認待ちの案件一覧</h1>
             <table class="user-table">
                 <thead>
                     <tr>
@@ -74,7 +74,7 @@
             </table>
         </main>
     </div>
-    <script src="/js/app_status_approved.js"></script>
+    <script src="/js/app_status_admin.js"></script>
     <script src="/js/app_common.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
