--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -27,9 +27,10 @@
                     <a href="#" onclick="toggleSubMenu1()">案件情報</a>
                     <ul id="submenu1" style="margin-left: 20px;">
                         <li><a href="project_list.html">案件情報一覧</a></li>
-                        <li><a href="status_pending.html">承認待ち</a></li>
-                        <li><a href="status_rejected.html">差し戻し</a></li>
-                        <li><a href="status_approved.html">承認済み</a></li>
+                        <li><a href="status_pending.html">申請待ち</a></li>
+                        <li><a href="status_manager.html">部長承認待ち</a></li>
+                        <li><a href="status_admin.html">最終承認待ち</a></li>
+                        <li><a href="status_approved.html">最終承認済み</a></li>
                     </ul>
                 </li>
                 <li>
@@ -68,14 +69,13 @@
     <script src="/js/app_common.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            const role = localStorage.getItem("loginRole");
-            if (role === "users") {
-            // 「社員情報」と「ユーザ情報」のメニューを非表示
-            const employeeMenu = document.getElementById("menu-employee");
-            const userMenu = document.getElementById("menu-user");
-            if (employeeMenu) employeeMenu.style.display = "none";
-            if (userMenu) userMenu.style.display = "none";
+        const role = localStorage.getItem("loginRole");
+        if (role === "users") {
+            document.getElementById("menu-employee").style.display = "none";
+            document.getElementById("menu-user").style.display = "none";
         }
+
+        document.getElementById("login-user").textContent = `ログイン中: ${localStorage.getItem("loginUser")}`;
 
         // ヘッダーのユーザー名表示も
         const user = localStorage.getItem("loginUser") || "未ログイン";
