--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,7 +17,7 @@
             <input type="password" id="password" name="password" required>
 
             <button type="submit">ログイン</button>
-            <p id="errorMessage" class="error-message"></p>
+            <p id="error-Message" class="error-message"></p>
         </form>
     </div>
 
