--- a/src/main/resources/static/status_manager.html
+++ b/src/main/resources/static/status_manager.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>差し戻し案件一覧</title>
+    <title>部長承認待ち案件一覧</title>
     <link rel="stylesheet" href="/css/styles_common.css">
     <link rel="stylesheet" href="/css/styles_status.css">
 </head>
@@ -74,7 +74,7 @@
             </table>
         </main>
     </div>
-    <script src="/js/app_project_common.js"></script>
+    <script src="/js/app_status_manager.js"></script>
     <script src="/js/app_common.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
